<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/me_chat_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/female_region"
        android:background="@color/background_theme"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/me_chat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/me_chat_image"
        android:text="@string/message_content"
        android:background="@color/title"
        android:textColor="@color/words_icon"/>

    <TextView
        android:id="@+id/me_chat_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/me_chat_text"
        android:layout_alignBottom="@+id/me_chat_text"
        android:text="@string/message_time" />

</RelativeLayout>