<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_theme"
    tools:context=".friend_chat_Activity">

    <LinearLayout
        android:id="@+id/top_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/friend_chat_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/back"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/friend_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/words_icon"
            android:paddingTop="20dp"
            android:layout_weight="1"
            android:text="@string/friend_name"
            android:textSize="20sp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/friend_chat_more"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/more"
            android:contentDescription="@string/more" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_layout"
        app:layout_constraintBottom_toTopOf="@+id/chat_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/chat_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/chat_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type_message" />

        <Button
            android:id="@+id/chat_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>