<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/background_theme"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:outlineAmbientShadowColor="@color/title"
            android:background="@color/background_theme"
            android:src="@drawable/female_region"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/searchButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="2dp"
                android:src="@drawable/search"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/search_button_description" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apptheme"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_private_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/words"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>